add UserAPI
